--- a/index.html
+++ b/index.html
@@ -2,195 +2,101 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COOBAN</title><link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta name="viewport" content="width=device-width, initial-scale= ">
+    <title> Digital Marketig</title><link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
+    <div class="navbar">
+        <div class="nav1"></div>
+        <div class="nav2">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+    </div>
     <div class="content1">
-        <div class="con1">
-            <div class="con2">
-                <h1>COOBAN</h1>
-            </div>
-            <div class="con3">
-                <li>HOME</li>
-                <li>PAGES</li>
-                <li>DROPDOWN</li>
-                <li>LINK TEXT</li>
-                <li>LINK TEXT</li>
-            </div>          
-        </div>
-        <article class="introtxt">  
-            <h1>NUNC ORNARE LIBERO VITAE EROS</h1>
-            <p>Quis dui maximus bibendum leo a eleifend felis phasellus volutpat porttitor libero phasellus tincidunt enim in dapibus interdum proin imperdiet in.</p>
-            <button>VIVERRA EGESTAS</button>
-        </article>
+    <div class="text">
+        <h1>Grow your business</h1>
+        <h2>Digital</h2>
+        <h3>Marketing</h3>
+        <a class="readmore_bt">
+            Read More
+        </a>
+
+    </div>            
     </div>
     <div class="content2">
-        <div class="smallbox1">
-            <article class="one_third first">
-                <header>
-                    <p class="nospace btmspace-10 font-xs uppercase">MAGNA ID ULLAMCORPER</p>
-                    <h2 class="font-x2">AENEAN TEMPOR DICTUM DIGNISSIM CURABITUR</h2>
-                </header>
-                <p class="btmspace-30">
-                    "Vehicula erat in porttitor pharetra tellus nulla vulputate pharetra aliquam curabitur non sagittis ligula vivamus sodales efficitur arcu imperdiet in…"
-                </p>
-                <button>Read More>> </button>
-            </article>
+        <div class="con1">
+            <h1>WHAT WE DO</h1>
         </div>
-        <div class="smallbox2">
-            <div class="box1">
-            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS0CkRRnWhEEK3B83mxfG9QgbCGvpRh7cCXRM76Vn8kz7iXR3Su">
-                <h1>NEQUE AC PRETIUM</h1>
-                <blockquote>
-                <p>Donec laoreet hendrerit diam eget tincidunt massa iaculis a mauris in felis…</p>
-                </blockquote>
-                <h2>View Details >></h2> 
+        <div class="con2">
+            <div class="prbox1">
+                <div class="dkbox1"></div>
+                <div class="dkbox2">
+                    <h1>LINK BUILDING</h1>
+                    <blockquote>
+                         <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                    </blockquote>
+                </div>
             </div>
-            <div class="box2">
-                <img src="https://www.shareicon.net/data/128x128/2015/09/26/107358_last_512x512.png">
-                <blockquote>
-                <h1>FAUCIBUS MAURIS</h1>
-                <p>Porttitor sed sit amet tortor sit amet felis mattis fringilla morbi accumsan blandit…</p>
-                </blockquote>
-                <h2>View Details >></h2>
+            <div class="prbox2">
+                <div class="jfbox1"></div>
+                <div class="jfbox2">
+                    <h1>MONTHLY SEO TASK</h1>
+                    <blockquote>
+                        <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                    </blockquote>
+                </div>
             </div>
-        </div>
-        <div class="smallbox3">
-            <div class="mbox1">
-                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQFsj3PwEARqCxqZeXIdWKESL0dWYChc6p0jkQ-IgKL1Ufo081O">
-                <h1>TELLUS VEHICULA</h1>
-                <blockquote>
-                <p>Ullamcorper arcu nec facilisis arcu pellentesque dapibus nunc quis pellentesque…</p>
-                </blockquote>
-                <h2>View Details >></h2>
+            <div class="prbox3">
+                <div class="adbox1"></div>
+                <div class="adbox2">
+                    <h1>ON PAGE SEO</h1>
+                    <blockquote>
+                        <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                    </blockquote></div>
             </div>
-            <div class="mbox2">
-                <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR-a_oqDIRQxN3zwONsxHL-rTSBRNE3DhtlphJvxxPzI6tZwgiC">
-                <h1>DICTUM MALESUADA</h1>
-                <blockquote>
-                <p>Pretium morbi vitae augue sit amet nisi mattis vestibulum euismod consequat…</p>
-                </blockquote>
-                <h2>View Details >></h2>
+            <div class="prbox4">
+                <div class="anbox1"></div>
+                <div class="anbox2">
+                    <h1>ONLINE MARKETING</h1>
+                    <blockquote>
+                        <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                    </blockquote></div>
             </div>
         </div>
     </div>
     <div class="content3">
-        <div class="pbox1">
-            <h1>MATTIS MASSA TELLUS EGET</h1>
-            <blockquote>
-            <P>Magna varius posuere sed porttitor orci ut velit feugiat facilisis nam vitae sem tempus nisi sodales luctus vel in ligula phasellus ullamcorper varius…</P>
-            </blockquote>
-            <h2>LOBORTIS IPSUM TEMPOR</h2>
-            <blockquote>
-            <P>Nulla tempus a morbi pharetra risus eget metus porttitor convallis integer non pellentesque dui proin feugiat fermentum fringilla ut eu velit…</P>
-            </blockquote>
-            <h3>AENEAN FACILISIS NULA UT</h3>
-            <blockquote>
-            <P>Augue fusce risus nulla scelerisque sed lacinia ac bibendum eu massa etiam consectetur venenatis justo id cursus maecenas luctus quam…</P>
-            </blockquote>
-        </div>
-        <div class="pbox2">
-            <div class="rbox1">
-                <h1>IN ANTE PORTTITOR PLACERAT NISL</h1>
-                <p>Mi quis lectus vivamus ipsum ipsum mollis non pharetra eu viverra nec erat mauris bibendum lectus nec convallis elementum elit…</p>
-                <button>PRETIUM NEQUE</button>
-            </div>
+        <div class="kybox1">
+            <h1>INCREASE YOUR CLIENT FOR</h1>
+            <p>BETTER POSITION OF BUSINESS</p>
         </div>
     </div>
     <div class="content4">
-        <div class="kbox1">
-            <div class="abox1"></div>
-            <div class="abox2">
-                <h1>MAECENAS</h1>
-                <blockquote>
-                <P>Neque ligula semper iaculis enim nec consectetur id phasellus nec enim dui viverra…</P>
-                </blockquote>
-            </div>
+        <div class="arbox1">
+            <h1>Increase your client</h1>
+            <p>There are many variations went there of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly these are believable are it. If you are going to use a pass 
+                <br>
+                <br>
+                age of Lorem Ipsum, you need to be sure there isn' but these are There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't not in value look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn</p>
+                <a class="readmore_bt">
+                    Read More
+                </a>
         </div>
-        <div class="kbox2">
-            <div class="gbox1"></div>
-            <div class="gbox2">
-                <h1>VENENATIS</h1>
-                <blockquote>
-                <p>Leo tempor lorem tempor aliquet quisque est libero ornare bibendum velit…</P>
-                </blockquote>
-            </div>
-        </div>
-        <div class="kbox3">
-            <h1>MAGNA VOLUTPAT</h1>
-            <blockquote>
-            <p>Finibus tempor maecenas non sagittis erat vestibulum dapibus est at pharetra vestibulum risus purus aliquet risus et tincidunt…</p>
-            </blockquote>
-            <button>Read More >></button>
-        </div>
+        <div class="arbox2"></div>
     </div>
     <div class="content5">
-        <div class="svbox1">
-            <blockquote>
-            <h1>FERMENTUM</h1>
-
-            <h2>AUGUE PROIN VEHICULA LEO</h2>
-            <p>Friday, 6th April 2045</p>
-            <h3>SAPIEN ALIQUAM URNA TRISTIQUE</h3>
-            <p>Thursday, 5th April 2045</p>
-            <h4>IMPERDIET SEM PELLENTESQUE</h4>
-            <p>Wednesday, 4th April 2045</p>
-            <h5>View More >></h5>
-            </blockquote>
-
+        <div class="nrbox1">
+            <h1>PREVIOUS PROJECTS</h1>
+            <p>OUR CASE STUDIES</p>
         </div>
-        <div class="svbox2"></div>
     </div>
     <div class="content6">
-        <div class="navbar">
-            <div class="nav1"></div>
-            <div class="nav2"></div>
-            <div class="nav3"></div>
-            <div class="nav4"></div>
-            <div class="nav5"></div>
-        </div>
-        <div class="ksbox">
-            <div class="skbox1">
-                <h1>PHASELLUS AENEAN</h1>
-                <P>Company Name</P>
-                <P>Street Name & Number</P>
-                <P>Town</P>
-                <P>Postcode/Zip</P>
-                <P> <i class="fa-solid fa-phone"></i>+00 (123) 456 7890</P>
-                <P><i class="fa-solid fa-envelope"></i> info@domain.com</P>
-            </div>
-            <div class="skbox2">
-                <h1>IMPERDIET ALIQUAM</h1>
-                <h2>NEQUE PORTA ELIT</h2>
-                <p>Friday, 6th April 2045</p>
-                <p>Dignissim tellus vitae posuere</p>
-                <p>laoreet dui nulla pulvinar</p>
-                <p>dolor at ultricies lectus orci</p>
-                <p>aliquam ipsum vestibulum at.</p>
-            </div>
-            <div class="skbox3">
-                <h1>IACULIS MAURIS</h1>
-                <p>Consectetur commodo orci</p>
-                <p>Vitae tempus maecenas</p>
-                <p>Feugiat eget nisi vel</p>
-                <p>Scelerisque fusce suscipit</p>
-                <p>At sodales facilisis vivamus</p>
-            </div>
-            <div class="skbox4">
-                <h1>QUIS AUCTOR NULLA</h1>
-                <p>Risus vivamus consectetur</p>
-                <p>neque augue eu tincidunt</p>
-                <p>urna varius nec phasellus.</p>
-                <p>Dapibus rutrum interdum</p>
-                <p>nullam commodo lacus sed</p>
-                <p>neque porttitor.</p>
-            </div>
-        </div>
-
+        <blockquote>        
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn'</p>
+        </blockquote>
     </div>
 
+        
     
 </body>
 </html>
